--- a/driver/ashmem/Makefile
+++ b/driver/ashmem/Makefile
@@ -15,4 +15,4 @@ install:
 	cp ashmem_linux.ko $(DESTDIR)/
 
 clean:
-	rm -rf deps.h *.o *.ko *.mod.c *.symvers *.order .*.cmd .tmp_versions
+	rm -rf deps.h *.a *.o *.ko *.mod *.mod.c *.symvers *.order .*.cmd .tmp_versions
