--- a/libs/Makefile
+++ b/libs/Makefile
@@ -4,8 +4,8 @@ include cutils/Makefile
 include utils/Makefile
 include binder/Makefile
 
-#CFLAGS := -I.. -Iinclude -DHAVE_PTHREADS -DHAVE_SYS_UIO_H -DHAVE_ENDIAN_H -DHAVE_ANDROID_OS=1 -std=c++11
-CFLAGS := -O0 -g -I.. -Iinclude -DHAVE_PTHREADS -DHAVE_SYS_UIO_H -DHAVE_ENDIAN_H -DHAVE_ANDROID_OS=1 -std=c++11
+CFLAGS := -O3 -I.. -Iinclude -DHAVE_PTHREADS -DHAVE_SYS_UIO_H -DHAVE_ENDIAN_H -DHAVE_ANDROID_OS=1 -std=c++11
+#CFLAGS := -O0 -g -I.. -Iinclude -DHAVE_PTHREADS -DHAVE_SYS_UIO_H -DHAVE_ENDIAN_H -DHAVE_ANDROID_OS=1 -std=c++11
 
 libbinder.a: $(objects)
 	ar cr $@ $^
