--- a/driver/ashmem/.cproject
+++ b/driver/ashmem/.cproject
@@ -33,7 +33,7 @@
 		</cconfiguration>
 	</storageModule>
 	<storageModule moduleId="cdtBuildSystem" version="4.0.0">
-		<project id="binder_driver_ashmem.null.1331485972" name="binder_driver_ashmem"/>
+		<project id="driver_ashmem.null.1331485972" name="driver_ashmem"/>
 	</storageModule>
 	<storageModule moduleId="scannerConfiguration">
 		<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
