--- a/driver/ashmem/.project
+++ b/driver/ashmem/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>binder_driver_ashmem</name>
+	<name>driver_ashmem</name>
 	<comment></comment>
 	<projects>
 	</projects>
