--- a/libs/Makefile
+++ b/libs/Makefile
@@ -1,4 +1,4 @@
-all: libbinder.a
+TARGET = libbinder.a
 
 include cutils/Makefile
 include utils/Makefile
@@ -7,13 +7,15 @@ include binder/Makefile
 CFLAGS := -O3 -I.. -I./include -DHAVE_PTHREADS -DHAVE_SYS_UIO_H -DHAVE_ENDIAN_H -DHAVE_ANDROID_OS=1 -std=c++11
 #CFLAGS := -O0 -g -I.. -Iinclude -DHAVE_PTHREADS -DHAVE_SYS_UIO_H -DHAVE_ENDIAN_H -DHAVE_ANDROID_OS=1 -std=c++11
 
-libbinder.a: $(objects)
-	ar cr $@ $^
-
-clean:
-	rm -f  libbinder.a `find -name \*.o`
-
 %.o : %.cpp
 	gcc $(CFLAGS) -c -o $@ $<
 %.o : %.c
 	gcc $(CFLAGS) -c -o $@ $<
+
+$(TARGET): $(objects)
+	ar cr $@ $^
+
+all: $(TARGET)
+
+clean:
+	rm -f libbinder.a `find -name \*.o`
